# owasp_checklist

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
owasp_checklist/: cli.py  core.py
