[tool.poetry]
name = "owasp-checklist"
version = "0.1.0"
description = ""
authors = ["sonesuke <iamsonesuke@gmail.com>"]
readme = "README.md"
packages = [{include = "owasp_checklist"}]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.4.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pysen = "^0.10.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
types-requests = "^2.28.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
owasp-checklist = "owasp_checklist.cli:main"


[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = ["error", "ignore::UserWarning"]
addopts = "--cov-report term-missing --cov=mypo --cov-fail-under=100"
testpaths = [
    "tests"
]

[tool.pysen]
version = "0.10.2"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py37"
isort_known_third_party = ["fire"]
isort_known_first_party = ["owasp_checklist"]
mypy_path = ["."]

[[tool.pysen.lint.mypy_targets]]
paths = ["."]

